--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=productservice
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=saran@mysql#25
+spring.datasource.password=root
 
 server.port=9090
 
